--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@/*": ["./src/*"],
       "@atomic": ["./src/components/atomic"],
       "@utils": ["./src/utils"]
     }
